tests/baselines/reference/parserErrorRecovery_ParameterList4.errors.txt
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/ParameterLists/parserErrorRecovery_ParameterList4.ts(1,14): error TS1138: Parameter declaration expected.
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/ParameterLists/parserErrorRecovery_ParameterList4.ts(1,15): error TS1127: Invalid character.


==== tests/cases/conformance/parser/ecmascript5/ErrorRecovery/ParameterLists/parserErrorRecovery_ParameterList4.ts (2 errors) ====
    function f(a,#) {
                 ~
!!! error TS1138: Parameter declaration expected.
                  
!!! error TS1127: Invalid character.
    }